css/style.css
.button{
    display: inline-block;
    padding: 15px 25px;
    color: #fff;
    border: none;
    background-color: #8EB529;
    border-bottom: 4px solid #779E29;
    position: absolute;
    top: 175px;
    right: 20px;
    cursor: pointer;
}
.monday, .tuesday, .wednesday, .thursday, .friday, .saturday, .sunday{
    display:inline-block;
    margin: auto;
}
.table{
    font-family: arial, sans-serif;
    border-collapse: collapse;
    width: 160px;
    border: ridge;
    margin-top: 10px;
    margin-left: 15px;
}
.rows {
    border: 1px solid #dddddd;
    text-align: center;
    padding: 8px;
}
.heading{
    font-weight: bold;
    border: 1px solid #dddddd;
    text-align: center;
    padding: 8px;
}
.weekdays{
    display:inline-block;
    border: 1px solid black;
    border-radius: 40px;
    width: 160px;
    margin-left: 15px;
}
h2{
    text-align: center;
}
.heading{
    width: 100%;
    text-align: center;
    margin-top: 50px;
}
.container{
    width: 500px;
    height:400px;
    text-align: center;
    border-radius: 4px;
    margin: 0 auto;
    margin-top: 50px;
}
input[type="text"],input[type="password"]{
    height: 45px;
    width: 300px;
    font-size: 20px;
    margin: auto;
    margin-bottom: 20px;
    background-color: #fff;
    text-align: center;
}
.btn-login1{
    padding: 15px 25px;
    color: #fff;
    border: none;
    background-color: #8EB529;
    border-bottom: 4px solid #779E29;
    cursor: pointer;
}
.btn-login{
    float: right;
    padding: 15px 25px;
    color: #fff;
    border: none;
    background-color: #8EB529;
    border-bottom: 4px solid #779E29;
    cursor: pointer;
}
.btn-cancel{
    float: left;
    padding: 15px 25px;
    color: #fff;
    border: none;
    background-color: #8EB529;
    border-bottom: 4px solid #779E29;
}
p{
    color: #000000;
}
.password-Modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
}

/* Modal Content */
.password-modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 50%;
    height: 420px;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}

/* Add Animation */
@-webkit-keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

@keyframes animatetop {
    from {top:-300px; opacity:0}
    to {top:0; opacity:1}
}

/* The Close Button */
.btn-cancel{
    float: left;
    padding: 15px 25px;
    color: #fff;
    border: none;
    background-color: #8EB529;
    border-bottom: 4px solid #779E29;
}

.btn-cancel:hover,
.btn-cancel:focus {
    color: #000;
    text-decoration: none;
    cursor: pointer;
}

.password-modal-header {
    padding: 2px 16px;
    background-color: #8EB529;
    color: white;
    text-align: center;
}

.password-modal-body {padding: 2px 16px;}

